--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+     rel="stylesheet"
+     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
 </head>
 <body>
     <nav>
@@ -35,6 +39,10 @@
                     <box-icon name='shopping-bags' type='solid' color="white" ></box-icon>
                     <h3>Workshop</h3>
                 </a>
+                <a href="https://www.liverpoolfc.com/" target="_blank"  class="links-container-item">
+                    <box-icon name='globe' color="white"></box-icon>
+                    <h3>Official Website</h3>
+                </a>
                 <a href="#"  class="links-container-item">
                     <box-icon name='id-card' type='solid' color="white" ></box-icon>
                     <h3>Credits</h3>
@@ -45,7 +53,8 @@
 
     <main>
         <div class="banner">
-            <img src="assets/Liverpool FC..png" alt="">
+            <h1>YOU WILL NEVER WALK ALONE.</h1>
+            <img src="assets/Jordan-Henderson-trophy-lift-gallery-14052022.png" alt="">
         </div>
         <div id="information" class="yaps">
             <div class="yaps-container">
@@ -58,52 +67,127 @@
         <div id="jersey" class="jersey">
             <div class="jersey-content">
                 <h1>JERSEY</h1>
-                <div class="jersey-item-wrap">
-                    <div class="jersey-item">
-                        <div class="jersey-container">
-                            <div class="jersey-container-upper">
-                                <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+
+                <div class="swiper">
+                    <div class="jersey-item-wrap2 swiper-wrapper">
+                        <div class="jersey-item2 swiper-slide"  id="one">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>W. ENDO 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
                             </div>
-                            <div class="jersey-container-lower">
-                                <h2>M. SALAH 2024-2025 Home Kit</h2>
-                                <h4>Mohammed Salah Home Kit</h4>
-                                <h4>Size : 2XL</h4>
-                                <a class="buy-link" href="#">Buy</a>
+                        </div>
+                        <div class="jersey-item2 swiper-slide" id="two">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>M. SALAH 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jersey-item2 swiper-slide" id="three">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>F. CHIESA 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jersey-item2 swiper-slide" id="three">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>D. JOTA 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jersey-item2 swiper-slide" id="three">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>L. DIAZ 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jersey-item2 swiper-slide" id="three">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>V. VAN DIJK 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jersey-item2 swiper-slide" id="three">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>J.GOMEZ 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jersey-item2 swiper-slide" id="three">
+                            <div class="jersey-container">
+                                <div class="jersey-container-upper">
+                                    <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
+                                </div>
+                                <div class="jersey-container-lower">
+                                    <h2>A. BECKER 2024-2025</h2>
+                                    <h4>Price : 300 THB</h4>
+                                    <h4>Size : XL - 4XL</h4>
+                                    <a class="buy-link" href="#">Buy</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="jersey-item">
-                        <div class="jersey-container">
-                            <div class="jersey-container-upper">
-                                <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
-                            </div>
-                            <div class="jersey-container-lower">
-                                <h2>M. SALAH 2024-2025 Home Kit</h2>
-                                <h4>Mohammed Salah Home Kit</h4>
-                                <h4>Size : 2XL</h4>
-                                <a class="buy-link" href="#">Buy</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="jersey-item">
-                        <div class="jersey-container">
-                            <div class="jersey-container-upper">
-                                <img src="assets/Liverpool-Home-Kids-Football-Kit-24-25.jpg" alt="">
-                            </div>
-                            <div class="jersey-container-lower">
-                                <h2>M. SALAH 2024-2025 Home Kit</h2>
-                                <h4>Mohammed Salah Home Kit</h4>
-                                <h4>Size : 2XL</h4>
-                                <a class="buy-link" href="#">Buy</a>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="swiper-pagination"></div>
+
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
         </div>
     </main>
 
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+    <script src="scripts/carousel.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
