--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                     <h3>Liverpool Football Club is a professional football club based in Liverpool, England. The club competes in the Premier League, the top tier of English football. Founded in 1892, the club joined the Football League the following year and has played its home games at Anfield since its formation. Liverpool is one of the most valuable and widely supported clubs in the world.</h3>
                 </div>
             </div>
+            <div class="yaps-container2">
+                <div class="right-yap">
+                    <h1>"THE REDS"</h1>
+                    <h3>Already nicknamed "The Reds", it was under Shankly in the 60s that the team first adopted the distinctive all-red home strip which has been used ever since. Also adopted under Shankly's tenure was the club's anthem "You'll Never Walk Alone". The Reds compete in the local Merseyside derby against fellow Liverpool club Everton, often referred to simply as "The Blues". As the two most decorated clubs in England, and inter-city rivals, Liverpool also has a long-standing rivalry with the Manchester club Manchester United.</h3>
+                </div>
+            </div>
         </div>
         <div id="jersey" class="jersey">
             <div class="jersey-content">
