--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <box-icon name='t-shirt' type='solid' color="white" ></box-icon>
                     <h3>Jerseys</h3>
                 </a>
-                <a href="#"  class="links-container-item">
-                    <box-icon name='shopping-bags' type='solid' color="white" ></box-icon>
-                    <h3>Workshop</h3>
+                <a href="#fixtures"  class="links-container-item">
+                    <box-icon type='solid' name='stopwatch' color="white"></box-icon>
+                    <h3>Fixtures</h3>
                 </a>
                 <a href="https://www.liverpoolfc.com/" target="_blank"  class="links-container-item">
                     <box-icon name='globe' color="white"></box-icon>
@@ -182,6 +182,141 @@
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
+
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </div>
+        </div>
+
+        <div id="fixtures" class="fixtures">
+            <div class="fixtures-content">
+                <h1>FIXTURES</h1>
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="fixtures-item swiper-slide">
+                            <div class="fixtures-container">
+                                <div class="fixtures-container-upper">
+                                    <div class="fixures-header">
+                                        <h3>Emirates FA Cup</h3>
+                                        <h3 class="lower-tx">0 January 2025 - 19:15</h3>
+                                    </div>
+                                    <img src="assets/FA_Cup_2020.png" alt="">
+                                </div>
+                                <div class="fixtures-container-middle">
+                                    <div class="table">
+                                        <div class="upper-team">
+                                            <div class="team-name">
+                                                <img src="assets/liverpool-fc-logo-grant-rosalia-transparent.png" alt="">
+                                                <h3>Liverpool</h3>
+                                            </div>
+                                            <h2>7</h2>
+                                        </div>
+                                        <div class="lower-team">
+                                            <div class="team-name">
+                                                <img src="assets/Manchester_United_FC_crest.svg.png" alt="">
+                                                <h3>Manchester United</h3>
+                                            </div>
+                                            <h2>0</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="fixtures-container-lower">
+                                    <a class="buy-link" target="_blank" href="https://www.google.com/search?q=liverpool+7-0+manu+what+league&oq=liverpool+7-0&gs_lcrp=EgZjaHJvbWUqCAgAEEUYJxg7MggIABBFGCcYOzIICAEQRRgnGDsyCQgCEEUYORiABDIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIHCAYQABiABDIHCAcQABiABDIHCAgQABiABDIICAkQABgWGB7SAQgzNTEwajBqNKgCALACAQ&sourceid=chrome&ie=UTF-8#sie=m;/g/11t3cvwpy4;2;/m/02_tc;ms;fp;1;;;">
+                                        Match Report
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="fixtures-item swiper-slide">
+                            <div class="fixtures-container">
+                                <div class="fixtures-container-upper">
+                                    <div class="fixures-header">
+                                        <h3>Emirates FA Cup</h3>
+                                        <h3 class="lower-tx">0 January 2025 - 19:15</h3>
+                                    </div>
+                                    <img src="assets/FA_Cup_2020.png" alt="">
+                                </div>
+                                <div class="fixtures-container-middle">
+                                    <div class="table">
+                                        <div class="upper-team">
+                                            <div class="team-name">
+                                                <img src="assets/liverpool-fc-logo-grant-rosalia-transparent.png" alt="">
+                                                <h3>Liverpool</h3>
+                                            </div>
+                                        </div>
+                                        <div class="lower-team">
+                                            <div class="team-name">
+                                                <img src="assets/Manchester_United_FC_crest.svg.png" alt="">
+                                                <h3>Manchester United</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="fixtures-container-lower">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="fixtures-item swiper-slide">
+                            <div class="fixtures-container">
+                                <div class="fixtures-container-upper">
+                                    <div class="fixures-header">
+                                        <h3>Emirates FA Cup</h3>
+                                        <h3 class="lower-tx">0 January 2025 - 19:15</h3>
+                                    </div>
+                                    <img src="assets/FA_Cup_2020.png" alt="">
+                                </div>
+                                <div class="fixtures-container-middle">
+                                    <div class="table">
+                                        <div class="upper-team">
+                                            <div class="team-name">
+                                                <img src="assets/liverpool-fc-logo-grant-rosalia-transparent.png" alt="">
+                                                <h3>Liverpool</h3>
+                                            </div>
+                                        </div>
+                                        <div class="lower-team">
+                                            <div class="team-name">
+                                                <img src="assets/Manchester_United_FC_crest.svg.png" alt="">
+                                                <h3>Manchester United</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="fixtures-container-lower">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="fixtures-item swiper-slide">
+                            <div class="fixtures-container">
+                                <div class="fixtures-container-upper">
+                                    <div class="fixures-header">
+                                        <h3>Emirates FA Cup</h3>
+                                        <h3 class="lower-tx">0 January 2025 - 19:15</h3>
+                                    </div>
+                                    <img src="assets/FA_Cup_2020.png" alt="">
+                                </div>
+                                <div class="fixtures-container-middle">
+                                    <div class="table">
+                                        <div class="upper-team">
+                                            <div class="team-name">
+                                                <img src="assets/liverpool-fc-logo-grant-rosalia-transparent.png" alt="">
+                                                <h3>Liverpool</h3>
+                                            </div>
+                                        </div>
+                                        <div class="lower-team">
+                                            <div class="team-name">
+                                                <img src="assets/Manchester_United_FC_crest.svg.png" alt="">
+                                                <h3>Manchester United</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="fixtures-container-lower">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
